# libgcrypt

./: .gitignore  .mailmap  AUTHORS  ChangeLog  DESIGN  LICENSES  Makefile.am  NEWS  README  README-alpha  README.apichanges  THANKS  TODO  acconfig.h  acinclude.m4  autogen.rc  autogen.sh  configure.ac  configure.in  libgcrypt.txt  ltmain.sh
cipher/: ChangeLog  Makefile.am  Manifest  ac.c  arcfour-amd64.S  arcfour.c  arcfour.h  aria-aesni-avx-amd64.S  aria-aesni-avx2-amd64.S  aria-gfni-avx512-amd64.S  aria.c  asm-common-aarch64.h  asm-common-amd64.h  asm-common-i386.h  asm-inline-s390x.h  asm-poly1305-aarch64.h  asm-poly1305-amd64.h  bithelp.h  blake2.c  blake2b-amd64-avx2.S  blake2b-amd64-avx512.S  blake2s-amd64-avx.S  blake2s-amd64-avx512.S  blowfish-amd64.S  blowfish-arm.S  blowfish-armv6.S  blowfish.c  blowfish.h  bufhelp.h  bulkhelp.h  camellia-aarch64-ce.c  camellia-aarch64.S  camellia-aesni-avx-amd64.S  camellia-aesni-avx2-amd64.S  camellia-aesni-avx2-amd64.h  camellia-arm.S  camellia-armv6.S  camellia-gfni-avx2-amd64.S  camellia-gfni-avx512-amd64.S  camellia-glue.c  (+294 more)
doc/: ChangeLog  HACKING  Makefile.am  Notes-wk  announce-1.4.txt  announce.txt  cipher-ref.sgml  digest-ref.sgml  fdl.texi  fips-fsm.fig  gcrypt.texi  lgpl.texi  misc-ref.sgml  pubkey-ref.sgml  reference.sgml  yat2m.c
mpi/: ChangeLog  Makefile.am  asm-common-aarch64.h  asm-common-i386.h  config.links  ec-ed25519.c  ec-hw-s390x.c  ec-inline.h  ec-internal.h  ec-nist.c  ec.c  longlong.h  mpi-add.c  mpi-bit.c  mpi-cmp.c  mpi-div.c  mpi-gcd.c  mpi-inline.c  mpi-inline.h  mpi-internal.h  mpi-inv.c  mpi-mod.c  mpi-mpow.c  mpi-mul.c  mpi-pow.c  mpi-scan.c  mpicoder.c  mpih-cmp.c  mpih-const-time.c  mpih-div.c  mpih-mul.c  mpih-pow.c  mpiutil.c
mpi/aarch64/: mpih-add1.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-sub1.S
mpi/alpha/: mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S  udiv-qrnnd.S
mpi/amd64/: distfiles  func_abi.h  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
mpi/arm/: mpih-add1.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-sub1.S
mpi/armv6/: mpih-add1.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-sub1.S
mpi/generic/: mpih-add1.c  mpih-lshift.c  mpih-mul1.c  mpih-mul2.c  mpih-mul3.c  mpih-rshift.c  mpih-sub1.c  udiv-w-sdiv.c
mpi/hppa/: mpih-add1.S  mpih-lshift.S  mpih-rshift.S  mpih-sub1.S  udiv-qrnnd.S
mpi/hppa1.1/: mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  udiv-qrnnd.S
mpi/i386/: mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S  syntax.h
mpi/i586/: mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
mpi/m68k/: mpih-add1.S  mpih-lshift.S  mpih-rshift.S  mpih-sub1.S  syntax.h
mpi/m68k/mc68020/: mpih-mul1.S  mpih-mul2.S  mpih-mul3.S
mpi/mips3/: mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
mpi/pa7100/: mpih-lshift.S  mpih-rshift.S
mpi/pentium4/: distfiles
mpi/power/: mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
mpi/powerpc32/: mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S  syntax.h
mpi/sparc32/: mpih-add1.S  mpih-lshift.S  mpih-rshift.S  udiv.S
mpi/sparc32v8/: mpih-mul1.S  mpih-mul2.S  mpih-mul3.S
mpi/supersparc/: udiv.S
src/: ChangeLog  Makefile.am  Manifest  README  ath-compat.c  ath-pth-compat.c  ath-pth.c  ath-pthread-compat.c  ath-pthread.c  ath.c  ath.h  benchmark.c  cipher-proto.h  cipher.h  cipher.h.orig  const-time.c  const-time.h  context.c  context.h  dumpsexp.c  ec-context.h  fips.c  g10lib.h  gcrypt-config.in  gcrypt-int.h  gcrypt-module.h  gcrypt-testapi.h  gcrypt.h  gcrypt.h.in  gcrypt.m4  gcryptrnd.c  gen-note-integrity.sh  genhmac.sh  getrandom.c  global.c  hmac256.c  hmac256.h  hwf-arm.c  hwf-common.h  hwf-ppc.c  (+32 more)
src/ath/: ChangeLog  Makefile.am  README  ath.c  gcrypt-ath-common.h  gcrypt-ath-internal.h
src/common/: ChangeLog  Makefile.am  control.c  error.c  gcrypt-common-common.h  gcrypt-common-internal.h  gcrypt-common.h  logger.c  memory.c  misc.c
src/compat/: ChangeLog  Makefile.am  README  ac.c  ath.c  ath.h  cipher.c  gcrypt-internal.h  gcrypt-module.h  gcrypt.h  global.c  init.c  md.c  module.c  mpi.c  prime.c  pubkey.c  random.c  secmem.c  secmem.h  sexp.c
src/include/: ChangeLog  README  crc.h  distfiles  gcrypt-ac-common.h  gcrypt-ac-internal.h  gcrypt-ac.h  gcrypt-ath-common.h  gcrypt-ath-internal.h  gcrypt-cipher-common.h  gcrypt-cipher-internal.h  gcrypt-cipher.h  gcrypt-common-common.h  gcrypt-common-internal.h  gcrypt-common.h  gcrypt-internal.h  gcrypt-md-common.h  gcrypt-md-internal.h  gcrypt-md.h  gcrypt-mpi-common.h  gcrypt-mpi-internal.h  gcrypt-mpi.h  gcrypt-prime-common.h  gcrypt-prime-internal.h  gcrypt-prime.h  gcrypt-random-common.h  gcrypt-random-internal.h  gcrypt-random.h  gcrypt-secmem-common.h  gcrypt-secmem-internal.h  gcrypt-secmem.h  gcrypt-sexp-common.h  gcrypt-sexp-internal.h  gcrypt-sexp.h  gcrypt.h  md4.h  md5.h  rmd160.h  sha1.h  sha256.h  (+3 more)
src/liberty/: ChangeLog  Makefile.am  README  missing-string.c
src/modules/asym-cipher/: Makefile.am  dsa.c  dsa.h  elg.c  elg.h  rsa.c  rsa.h
src/modules/hash/: Makefile.am  crc.c  crc.h  md4.c  md4.h  md5.c  md5.h  rmd160.c  rmd160.h  sha1.c  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h  (+4 more)
src/subsystems/: README
tests/: ChangeLog  ML-KEM-encapDecap-FIPS203-expectedResults.json  ML-KEM-encapDecap-FIPS203-prompt.json  Makefile.am  ac-compat.c  ac-data-compat.c  ac-data.c  ac-schemes-compat.c  ac-schemes.c  ac.c  aeswrap.c  basic-compat.c  basic.c  basic_all_hwfeature_combinations.sh  bench-slope.c  benchmark-compat.c  benchmark.c  cavs_driver.pl  cavs_tests.sh  common-startup.c  common.h  cshake.c  curves.c  dsa-rfc6979.c  encoding.c  fips186-dsa.c  fipsdrv.c  fipsrngdrv.c  full-compat.c  gchash.c  general-compat.c  genhashdata.c  hashtest-256g.in  hashtest-6g.in  hashtest.c  hmac.c  keygen-compat.c  keygen.c  keygrip-compat.c  keygrip.c  (+71 more)
(+171 files in other folders)
